# ZIPAR

./: .gitignore  LICENSE  README.md  dump.js  dump.py  main.py  package-lock.json  pyproject.toml
.github/: FUNDING.yml
agent/: index.ts  package-lock.json  package.json  tsconfig.json
agent/src/: error.ts  index.ts  loader.ts  main.ts  old.ts  reconstructor.ts  retriever.ts
src/zipar/: __init__.py  agent.js  args.py  connection.py  dump.py  message.py  reconstructor.py  zipar.py
