[project]
name = "ZIPAR"
version = "0.1.0"
description = "Zip IPA Retriever. It generate an IPA package from an installed app on an iOS jailbroken device using Frida."
readme = "README.md"
requires-python = ">=3.13"
authors = [{name = "Rafael Paiva", email = "08.paiva@gmail.com"}]
dependencies = [
    "frida>=17.6.2",
    "tabulate>=0.9.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/paivao/ZIPAR"
Repository = "https://github.com/paivao/ZIPAR"
"Bug Tracker" = "https://github.com/paivao/ZIPAR/issues"

[project.scripts]
zipar = "zipar:main"
