[project]
name = "ZIPAR"
version = "0.1.3"
description = "Zip IPA Reconstructor. It generate an IPA package from an installed app on an iOS jailbroken device using Frida."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Rafael Paiva", email = "08.paiva@gmail.com"}]
dependencies = [
    "frida>=17",
    "tabulate>=0.9",
    "tqdm>=4",
]
license = "MIT"
license-files = ["LICENSE"]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/paivao/ZIPAR"
Issues = "https://github.com/paivao/ZIPAR/issues"

[project.scripts]
zipar = "zipar.zipar:main"

[tool.setuptools.package-data]
zipar = [
    "agent.js",
]
